--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "montecinema",
+  "name": "sass",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "npx node-sass -w main.scss main.css",
-    "devserver": "live-server",
     "start": "npm-run-all --parallel devserver sass",
+    "sass": "node-sass -w scss/style.scss css/style.css",
+    "devserver": "live-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Agata",
   "license": "ISC",
   "dependencies": {
-    "node-sass": "^7.0.1"
+    "node-sass": "^7.0.1",
+    "run-all": "^1.0.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
